<resources>
    <string name="app_name" translatable="false">GNSS Server</string>
    <string name="nav_header_subtitle">ver. 1.0.0</string>
    <string name="nav_header_title">GNSS Server</string>

    <string name="nav_header_desc">Navigation header</string>

    <string name="action_record">Record track</string>
    <string name="action_share">Enable server</string>

    <string name="menu_about">About</string>
    <string name="menu_records">Records</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_status">Status</string>

    <string name="settings_operation_mode_text_view">Operation mode</string>
    <string name="permissions_message">Access to location data is required for this application.</string>
    <string name="attention_title">Attention</string>
    <string name="satellites_textView">Satellites</string>
    <string name="sat_used_textView">In use / Total</string>
    <string name="elevation_textView">ELEV</string>
    <string name="azimuth_textView">AZIM</string>
    <string name="navigation_status_textView">Navigation status</string>
    <string name="lat_textView">Latitude:</string>
    <string name="long_textView">Longitude:</string>
    <string name="altitude_textView">Altitude:</string>
    <string name="accuracy_textView">Accuracy:</string>
    <string name="altAccuracy_textView">Alt acc:</string>
    <string name="bearing_textView">Bearing:</string>
    <string name="bearingAcc_textView">Brg acc:</string>
    <string name="speed_textView">Speed:</string>
    <string name="speedAccuracy_textView">Speed acc:</string>

</resources>